feat: Update API documentation and refactor code structure to use Aeron Query Protocol